--- a/src/App.css
+++ b/src/App.css
@@ -85,3 +85,9 @@ h1, h2, h3, h4, h5, h6, p {
   justify-content: space-between;
   margin-top: 4rem;
 }
+
+.contact-points {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
