--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@
 :root {
   --theme-black: #0b090a;
   --theme-secondary-black: #161a1d;
+  --theme-hint-black: #20272d;
   --theme-secondary-black-translucent: rgba(22, 26, 29, 25%);
   --theme-dark-red: #660708;
   --theme-secondary-dark-red: #a4161a;
@@ -22,12 +23,21 @@
   --theme-secondary-dark-white: #d3d3d3;
   --theme-light-white: #f5f3f4;
   --theme-secondary-light-white: #ffffff;
-  --theme-light-blue: #4cc9f0;
+  --theme-light-pink: #f72585;
+  --theme-dark-pink: #b5179e;
+  --theme-light-purple: #7209b7;
+  --theme-secondary-light-purple: #560bad;
+  --theme-dark-purple: #480ca8;
+  --theme-secondary-dark-purple: #3a0ca3;
+  --theme-dark-blue: #3f37c9;
+  --theme-secondary-dark-blue: #4361ee; 
+  --theme-light-blue: #4895ef;
+  --theme-secondary-light-blue: #4cc9f0;
 }
 
 html {
   width: 100%;
-  height: 100%;
+  height: auto;
   background-color: var(--theme-black);
 }
 
@@ -49,6 +59,7 @@ h1, h2, h3, h4, h5, h6, p {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-flow: column;
 }
 
 .header-wrapper {
@@ -56,22 +67,93 @@ h1, h2, h3, h4, h5, h6, p {
   width: 80%;
   height: 50rem;
   margin-top: 8rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+  text-align: center;
+}
+
+.slider {
+  position: relative;
+  width: 100%;
+  height: 6rem;
+  font-size: 4rem;
+  overflow: hidden;
+  
   
 }
 
+.slider div {
+  height: 5.5rem;
+  color: #fff;
+  margin-bottom: 6rem;
+  text-align: center;
+}
+
+.slider-text1 {
+  animation: slide 5s linear infinite;
+}
+
+@keyframes slide {
+  0% {margin-top: -37.5rem;}
+  5% {margin-top: -22.75rem;}
+  33% {margin-top: -22.75rem;}
+  38% {margin-top: -11.25rem;}
+  66% {margin-top: -11.25rem;}
+  71% {margin-top: 0.25rem;}
+  100% {margin-top: 0.25rem;}
+}
+
+#greeting {
+  font-size: 8rem;
+  
+}
+
+#name {
+  font-size: 8rem;
+  background: linear-gradient(-45deg, var(--theme-light-pink), var(--theme-dark-pink), var(--theme-light-purple), var(--theme-secondary-light-purple), var(--theme-dark-purple), var(--theme-secondary-dark-purple), var(--theme-dark-blue), var(--theme-secondary-dark-blue), var(--theme-light-blue), var(--theme-secondary-light-blue), var(--theme-light-blue), var(--theme-secondary-dark-blue), var(--theme-dark-blue), var(--theme-secondary-dark-purple), var(--theme-dark-purple), var(--theme-secondary-light-purple), var(--theme-light-purple), var(--theme-dark-pink), var(--theme-light-pink));
+  background-size: 2000%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 7s linear infinite;
+}
+
+#title {
+  font-size: 3rem;
+  color: #ffffff;
+}
+
 #header-deadlines {
-  color: var(--theme-light-red);
+  background: linear-gradient(-45deg, var(--theme-dark-red), var(--theme-dark-red), var(--theme-dark-red), var(--theme-secondary-dark-red), var(--theme-light-red), var(--theme-light-red), var(--theme-secondary-dark-red), var(--theme-dark-red), var(--theme-dark-red), var(--theme-dark-red));
+  background-size: 2000%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 5s linear infinite;
 }
 
 #header-challenging {
-  color: var(--theme-light-blue);
+  background: linear-gradient(-45deg, var(--theme-light-pink), var(--theme-dark-pink), var(--theme-light-purple), var(--theme-secondary-light-purple), var(--theme-dark-purple), var(--theme-secondary-dark-purple), var(--theme-dark-blue), var(--theme-secondary-dark-blue), var(--theme-light-blue), var(--theme-secondary-light-blue), var(--theme-light-blue), var(--theme-secondary-dark-blue), var(--theme-dark-blue), var(--theme-secondary-dark-purple), var(--theme-dark-purple), var(--theme-secondary-light-purple), var(--theme-light-purple), var(--theme-dark-pink), var(--theme-light-pink));
+  background-size: 2000%;
+  -webkit-text-fill-color: transparent;
+  -webkit-background-clip: text;
+  animation: animate 7s linear infinite;
+}
+
+@keyframes animate {
+  0% {
+    background-position: 0%;
+  }
+  100% {
+    background-position: 100%;
+  }
 }
 
 .header-wrapper h1 {
-  font-size: 5.5rem;
+  font-size: 4rem;
   line-height: 5.5rem;
   letter-spacing: -0.3rem;
-  margin-bottom: 16rem;
+  margin-bottom: 2rem;
 }
 
 .header-wrapper a {
@@ -81,13 +163,162 @@ h1, h2, h3, h4, h5, h6, p {
 }
 
 .contact-info {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: 4rem;
+  margin-left: -0.5rem;
+  overflow: hidden;
+  position: relative;
 }
 
 .contact-points {
   display: inline-flex;
   align-items: center;
   justify-content: center;
+  
+}
+
+.moved {
+  animation: 1s slide-left forwards;
+}
+
+.email {
+  margin-left: 0.3rem;
+  cursor: pointer;
+  
+}
+
+.show-email {
+  margin-left: 0rem;
+  margin-top: -2.15rem;
+  padding: 0.2rem;
+  display: block;
+  cursor: text;
+  position: absolute;
+  animation: 1s appear forwards;
+  border: 1px solid var(--theme-secondary-black);
+  border-radius: 4px;
+}
+
+@keyframes slide-left {
+  to {
+    transform: translateX(-550%);
+  }
+}
+
+@keyframes slide-right {
+  to {
+    transform: translateX(0%);
+  }
+}
+
+@keyframes appear {
+  0% {
+    display: none;
+    transform:translateX(100%);
+  }
+  100% {
+    display: block;
+    transform:translateX(-2.5%);
+  }
+}
+
+.show-email:hover {
+  color: var(--theme-secondary-dark-white);
+}
+
+.hide-email {
+  animation: 1s slide-right forwards;
+  display: none;
+}
+
+.show-hint {
+  color: var(--theme-hint-black);
+  display: flex;
+  align-self: flex-end;
+}
+
+.hide-hint {
+  color: transparent;
+}
+
+.scroll-down {
+  display: none;
+  transform: rotate(90deg);
+  color: var(--theme-hint-black);
+  align-self: flex-start;
+}
+
+.about-me {
+  font-family: Mark Pro Bold, sans-serif;
+  width: 80%;
+  height: 50rem;
+  margin-top: 4rem;
+  font-size: 3rem;
+  color: var(--theme-secondary-light-white);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-flow: column;
+}
+
+.about-me h1 {
+  font-size: 5.5rem;
+  line-height: 5.5rem;
+  letter-spacing: -0.2rem;
+  margin-bottom: 4rem;
+  text-align: center;
+}
+
+.about-me-desc {
+  text-align: center;
+  margin-bottom: 4rem;
+}
+
+.about-me-boxes {
+  width: 70rem;
+  height: 20rem;
+  border: 2px solid var(--theme-secondary-light-white);
+  display: flex;
+
+}
+
+.about-me-box1, .about-me-box2, .about-me-box3 {
+  border: 2px solid var(--theme-secondary-light-white);
+  width: 33.33%;
+  display: flex;
+  text-align: center;
+  align-items: center;
+  flex-flow: column;
+
+}
+
+.about-me-box1 h6, .about-me-box2 h6, .about-me-box3 h6 {
+  margin-top: 2rem;
+
+}
+
+.about-me-box1 h6 span:first-child {
+  background: linear-gradient(to top, rgb(223, 4, 141) 30%, transparent 30%);
+}
+
+.about-me-box2 h6 span:first-child {
+  background: linear-gradient(to top, rgb(45, 73, 216) 30%, transparent 30%);
+}
+
+.about-me-box3 h6 span:first-child {
+  background: linear-gradient(to top, rgb(255, 106, 43) 30%, transparent 30%);
+}
+
+.about-me-box1 p, .about-me-box2 p, .about-me-box3 p {
+  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-top: 2rem;
+  width: 16rem;
+}
+
+.projects {
+  height: 40rem;
 }
