--- a/src/App.css
+++ b/src/App.css
@@ -333,8 +333,16 @@ h1, h2, h3, h4, h5, h6, p {
   grid-template-columns: 1fr 1fr 1fr;
 }
 
-@media (max-width: 1200px) {
+@media (max-width: 480px) {
+  .about-me h1 {
+    font-size: 1em;
+    margin-top: 2em;
+  }
+  .about-me-desc {
+    font-size: 0.7em;
+  }
   .about-me-boxes {
+    width: 100vw;
     height: auto;
     grid-template-columns: 1fr;
   }
