--- a/src/App.css
+++ b/src/App.css
@@ -393,7 +393,7 @@ h1, h2, h3, h4, h5, h6, p {
   font-size: 8rem;
   line-height: 8rem;
   letter-spacing: -0.2rem;
-  margin-left: 8rem;
+  /* margin-left: 8rem; */
   margin-bottom: 4rem;
   text-align: left;
 }
@@ -405,6 +405,13 @@ h1, h2, h3, h4, h5, h6, p {
 
 .project-header-left {
   width: 50%;
+  text-align: center;
+  align-items: center;
+}
+
+.project-header-left h1 {
+  width: auto;
+  text-align: center;
 }
 
 .project-header-right {
@@ -468,5 +475,32 @@ h1, h2, h3, h4, h5, h6, p {
   .project-card.featured {
     grid-row: span 1;
     grid-column: span 1;
+  }
+}
+
+@media (max-width: 480px) {
+  .project-header {
+    display: flex;
+    flex-flow: column wrap; 
+    height: auto;
+  }
+  .project-header-left {
+    width: 100%;
+  }
+  .project-header-left h1 {
+    font-size: 4em;
+    margin: 0;
+    width: auto;
+  }
+  .project-header-right {
+    width: 100%;
+  }
+  .project-card {
+    width: 65%;
+    aspect-ratio: 1 / .75;
+    border-radius: 0.5rem;
+  }
+  .project-portfolio {
+    row-gap: 2rem;
   }
 }
