--- a/src/App.css
+++ b/src/App.css
@@ -414,7 +414,7 @@ h1, h2, h3, h4, h5, h6, p {
 .project-portfolio {
   display: grid;
   grid-template-columns: 
-    repeat(auto-fit, minmax(30rem, 1fr));
+    repeat(auto-fit, minmax(1fr, 1fr));
   row-gap: 1rem;
   column-gap: 1rem;
   margin-bottom: 8rem;
