created sections instead of just divs

--- a/src/App.css
+++ b/src/App.css
@@ -60,333 +60,11 @@ h1, h2, h3, h4, h5, h6, p {
   flex-flow: column;
 }
 
-.hero {
-  font-family: Mark Pro Bold, sans-serif;
-  width: 80%;
-  height: 50em;
-  margin-top: 8rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
-  text-align: center;
-}
-
-.slider {
-  position: relative;
-  width: 100%;
-  height: 6rem;
-  font-size: 1em;
-  overflow: hidden;
-}
-
-.slider div {
-  height: 5.5rem;
-  color: #fff;
-  margin-bottom: 6rem;
-  text-align: center;
-}
-
-.slider-text1 {
-  animation: slide 5s linear infinite;
-}
-
-@keyframes slide {
-  0% {margin-top: -37.5rem;}
-  5% {margin-top: -22.75rem;}
-  33% {margin-top: -22.75rem;}
-  38% {margin-top: -11.25rem;}
-  66% {margin-top: -11.25rem;}
-  71% {margin-top: 0.25rem;}
-  100% {margin-top: 0.25rem;}
-}
-
-#greeting {
-  font-size: 2em;
-}
-
-#name {
-  font-size: 2em;
-  background: linear-gradient(-45deg, var(--theme-light-pink), var(--theme-dark-pink), var(--theme-light-purple), var(--theme-secondary-light-purple), var(--theme-dark-purple), var(--theme-secondary-dark-purple), var(--theme-dark-blue), var(--theme-secondary-dark-blue), var(--theme-light-blue), var(--theme-secondary-light-blue), var(--theme-light-blue), var(--theme-secondary-dark-blue), var(--theme-dark-blue), var(--theme-secondary-dark-purple), var(--theme-dark-purple), var(--theme-secondary-light-purple), var(--theme-light-purple), var(--theme-dark-pink), var(--theme-light-pink));
-  background-size: 2000%;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  animation: animate 7s linear infinite;
-}
-
-#header-deadlines {
-  background: linear-gradient(-45deg, var(--theme-dark-red), var(--theme-dark-red), var(--theme-dark-red), var(--theme-secondary-dark-red), var(--theme-light-red), var(--theme-secondary-light-red), var(--theme-light-red), var(--theme-secondary-dark-red), var(--theme-dark-red), var(--theme-dark-red), var(--theme-dark-red));
-  background-size: 2000%;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  animation: animate 5s linear infinite;
-}
-
-#header-challenging {
-  background: linear-gradient(-45deg, var(--theme-light-pink), var(--theme-dark-pink), var(--theme-light-purple), var(--theme-secondary-light-purple), var(--theme-dark-purple), var(--theme-secondary-dark-purple), var(--theme-dark-blue), var(--theme-secondary-dark-blue), var(--theme-light-blue), var(--theme-secondary-light-blue), var(--theme-light-blue), var(--theme-secondary-dark-blue), var(--theme-dark-blue), var(--theme-secondary-dark-purple), var(--theme-dark-purple), var(--theme-secondary-light-purple), var(--theme-light-purple), var(--theme-dark-pink), var(--theme-light-pink));
-  background-size: 2000%;
-  -webkit-text-fill-color: transparent;
-  -webkit-background-clip: text;
-  animation: animate 7s linear infinite;
-}
-
-@keyframes animate {
-  0% {
-    background-position: 0%;
-  }
-  100% {
-    background-position: 100%;
-  }
-}
 
 
-.hero h1 {
-  font-size: 4rem;
-  line-height: 5.5rem;
-  letter-spacing: -0.3rem;
-  margin-bottom: 2rem;
-}
-
-.hero a {
-  color: var(--theme-dark-white);
-  letter-spacing: 0.3rem;
-  text-decoration: none;
-}
-
-@media (max-width: 480px) {
-  .hero {
-    height: 30em;
-  }
-  .hero h1 {
-    margin-bottom: 0rem;
-
-  line-height: 4rem;
-  }
-  #greeting {
-    font-size: 1em;
-  }
-  #name {
-    font-size: 1em;
-  }
-  .slider {
-    margin-top: 5rem;
-    font-size: 0.5em;
-    letter-spacing: 0.1rem;
-    line-height: 2.2rem;
-  }
-}
-
-.contact-info {
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 4rem;
-  margin-left: -0.5rem;
-  overflow: hidden;
-  position: relative;
-}
-
-.contact-points {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.moved {
-  animation: 1s slide-left forwards;
-}
-
-.email {
-  margin-left: 0.3rem;
-  cursor: pointer;
-  
-}
-
-.show-email {
-  margin-left: 0rem;
-  margin-top: -2.15rem;
-  padding: 0.2rem;
-  display: block;
-  cursor: text;
-  position: absolute;
-  animation: 1s appear forwards;
-  border: 1px solid var(--theme-secondary-black);
-  border-radius: 4px;
-}
-
-@keyframes slide-left {
-  to {
-    transform: translateX(-600%);
-  }
-}
-
-@keyframes slide-right {
-  to {
-    transform: translateX(0%);
-  }
-}
-
-@keyframes appear {
-  0% {
-    display: none;
-    transform:translateX(100%);
-  }
-  100% {
-    display: block;
-    transform:translateX(-50%);
-  }
-}
-
-.show-email:hover {
-  color: var(--theme-secondary-dark-white);
-}
-
-.hide-email {
-  animation: 1s slide-right forwards;
-  display: none;
-}
-
-.show-hint {
-  color: var(--theme-hint-black);
-  display: flex;
-  align-self: flex-end;
-}
-
-.hide-hint {
-  color: transparent;
-}
-
-@media (max-width: 480px) {
-  .contact-info {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-flow: column;
-    margin-top: -4rem;
-    margin-left: -0.5rem;
-    overflow: hidden;
-    position: relative;
-  }
-  .contact-info-landing {
-    display: none;
-  }
-
-  @keyframes slide-left {
-    to {
-      transform: translateX(-300%);
-    }
-  }
-  @keyframes appear {
-    0% {
-      display: none;
-      transform:translateX(100%);
-    }
-    100% {
-      display: block;
-      transform:translateX(5%);
-    }
-  }
-  .contact-points {
-    margin-top: 1rem;
-  }
-}
-
-.scroll-down {
-  display: none;
-  transform: rotate(90deg);
-  color: var(--theme-hint-black);
-  align-self: flex-start;
-}
-
-.about-me {
-  font-family: Mark Pro Bold, sans-serif;
-  width: 80%;
-  height: auto;
-  padding-top: 5rem;
-  margin-top: 8rem;
-  margin-bottom: 8rem;
-  font-size: 3rem;
-  color: var(--theme-secondary-light-white);
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-flow: column;
-}
-
-.about-me h1 {
-  font-size: 5.5rem;
-  line-height: 5.5rem;
-  letter-spacing: -0.2rem;
-  margin-bottom: 4rem;
-  text-align: center;
-}
-
-.about-me-desc {
-  text-align: center;
-  margin-bottom: 4rem;
-}
-
-.about-me-boxes {
-  width: 70rem;
-  height: 20rem;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  margin-bottom: 4rem;
-}
-
-@media (max-width: 1200px) {
-  .about-me-desc {
-    font-size: 0.7em;
-  }
-  .about-me-boxes {
-    width: 100vw;
-    height: auto;
-    grid-template-columns: 1fr;
-  }
-}
-
-@media (max-width: 600px) {
-  .about-me h1 {
-    font-size: 1em;
-    margin-top: 2em;
-  }
-}
-
-.about-me-box1, .about-me-box2, .about-me-box3 {
-  border: 2px solid var(--theme-secondary-light-white);
-  display: flex;
-  text-align: center;
-  align-items: center;
-  flex-flow: column;
-  padding-bottom: 4rem;
-}
 
 
-.about-me-box1 h6, .about-me-box2 h6, .about-me-box3 h6 {
-  margin-top: 2rem;
-
-}
-
-.about-me-box1 h6 span:first-child {
-  background: linear-gradient(to top, rgb(223, 4, 141) 30%, transparent 30%);
-}
-
-.about-me-box2 h6 span:first-child {
-  background: linear-gradient(to top, rgb(45, 73, 216) 30%, transparent 30%);
-}
-
-.about-me-box3 h6 span:first-child {
-  background: linear-gradient(to top, rgb(255, 106, 43) 30%, transparent 30%);
-}
-
-.about-me-box1 p, .about-me-box2 p, .about-me-box3 p {
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  font-size: 1.2rem;
-  font-weight: 400;
-  margin-top: 2rem;
-  width: 16rem;
-}
+/* Project Section */
 
 .projects {
   width: 60%;
@@ -523,3 +201,6 @@ h1, h2, h3, h4, h5, h6, p {
     row-gap: 2rem;
   }
 }
+
+
+/* Project Section */
